maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:4: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime1.IslandMaze
    setDirection(direction.nord) 
                 ^